--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
     "url": "https://github.com/oxen-io/session-desktop.git"
   },
   "main": "ts/mains/main_node.js",
+  "targets": {
+    "util-worker": {
+      "source": "ts/webworker/workers/util.worker.ts",
+      "distDir": "./ts/webworker/workers/",
+      "optimize" : false,
+      "sourceMap": false,
+      "context": "web-worker"
+    }
+  },
   "scripts": {
     "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
@@ -33,13 +42,14 @@
     "test": "mocha --globals=Worker -r jsdom-global/register --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
     "lint-full": "yarn format-full && eslint . && tslint --format stylish --project .",
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
-    "transpile": "tsc",
+    "transpile": "tsc && yarn parcel-util-worker",
     "transpile:watch": "yarn grunt --force; tsc -w",
     "integration-test": "npx playwright test",
     "clean-transpile": "rimraf 'ts/**/*.js' 'ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
     "ready": "yarn grunt && yarn lint-full && yarn test",
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
-    "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json"
+    "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
+    "parcel-util-worker": "rimraf ts/webworker/workers/util.worker.js; parcel build --target util-worker --no-autoinstall --no-cache"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
@@ -159,10 +169,12 @@
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "3.4.4",
     "asar": "0.14.0",
+    "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
     "cross-env": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "electron": "^17.1.2",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
@@ -173,6 +185,7 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-mocha": "4.12.1",
     "eslint-plugin-more": "0.3.1",
+    "events": "^3.3.0",
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "grunt-contrib-concat": "1.0.1",
@@ -189,12 +202,16 @@
     "node-gyp": "3.8.0",
     "node-loader": "^2.0.0",
     "node-sass-import-once": "1.2.0",
+    "parcel": "^2.4.1",
     "patch-package": "^6.4.7",
+    "path-browserify": "^1.0.1",
     "playwright": "^1.16.3",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
+    "process": "^0.11.10",
     "run-script-os": "^1.1.6",
     "sinon": "9.0.2",
+    "stream-browserify": "^3.0.0",
     "ts-loader": "^9.2.8",
     "ts-mock-imports": "^1.3.0",
     "tslint": "5.19.0",
